# MatMulRL

./: .gitmodules  CMakeLists.txt
scripts/: run_square.bash
src/: main.cpp  mat_mul.h
